# Cola-DLM

./: .gitignore  LICENSE  NOTICE  README.md  README_zh.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
cola_dlm/: __init__.py  attention_utils.py  configuration_cola_dit.py  configuration_cola_vae.py  engine.py  inference.py  modeling_cola_dit.py  modeling_cola_vae.py  optim.py
docs/: architecture.md  architecture_zh.md  inference.md  inference_zh.md  model_card.md  model_card_zh.md
eval_output/: accuracy_summary.csv
eval_output/tasks_default/: hellaswag.jsonl  hellaswag_correct.jsonl  hellaswag_wrong.jsonl  lambada.jsonl  lambada_correct.jsonl  lambada_wrong.jsonl  mmlu.jsonl  mmlu_correct.jsonl  mmlu_wrong.jsonl  obqa.jsonl  obqa_correct.jsonl  obqa_wrong.jsonl  race.jsonl  race_correct.jsonl  race_wrong.jsonl  siqa.jsonl  siqa_correct.jsonl  siqa_wrong.jsonl  squad.jsonl  squad_correct.jsonl  squad_wrong.jsonl  story_cloze.jsonl  story_cloze_correct.jsonl  story_cloze_wrong.jsonl
examples/: quickstart.py
openai_adapter/: .env.example  README.md  README_zh.md  __init__.py  requirements.txt  server.py
scripts/: acc_calc.py  cola_chat_cli.py  cola_cpt.py  cola_pretrain.py  cola_sft.py  cola_vae_finetune.py  run_benchmark.sh
scripts/tasks/: __init__.py  gsm8k.py  mmlu.py  smoltalk.py  spellingbee.py
tasks/: common.py  customjson.py
tests/: test_attention_utils.py  test_attn_equivalence.py  test_package.py
